# project_linkedin

./: README.md  config.example.yaml  profile.example.yaml  pyproject.toml  requirements.txt
src/linkedin_easy_apply/: __init__.py  config.py  linkedin_bot.py  main.py  models.py  tracker.py
tests/: test_config_and_bot.py  test_tracker.py
